--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -208,6 +208,12 @@
           display: flex;
           flex-direction: column;
           cursor: pointer;
+          transition: .3s ease-in-out;
+
+          &:hover {
+            border: 1px solid $purple;
+            background-color: $bg-color;
+          }
 
           figure {
             width: 50px;
@@ -317,7 +323,7 @@
         grid-template-rows: 1fr 1fr 1fr;
         gap: 30px;
 
-        .single-type {
+        .single-type-check {
           width: 100%;
           height: 80px;
           display: grid;
@@ -325,6 +331,13 @@
           padding: 10px 20px;
           border: 1px solid rgba(0,0,0, 0.2);
           border-radius: 7px;
+          cursor: pointer;
+          transition: .3s ease-in-out;
+
+          &:hover {
+            background-color: $bg-color;
+            border: 1px solid $purple;
+          }
 
           .box {
             display: flex;
@@ -333,11 +346,14 @@
             input {
               width: 1.25rem;
               height: 1.25rem;
+              accent-color: $purple;
+              border-radius: 7px;
             }
 
             input[type="checkbox"]:checked {
               background: $purple;
             }
+
           }
 
           .content {
@@ -358,7 +374,7 @@
               }
             }
 
-            .price {
+            .addonPrice {
               color: $purple;
               font-weight: 600;
             }
@@ -428,10 +444,15 @@
               padding: 0;
               width: fit-content;
               cursor: pointer;
+              transition: .3s ease-in;
+
+              &:hover {
+                color: $primary;
+              }
             }
           }
 
-          .price {
+          .selected-plan-price {
             color: $primary;
             font-size: 1.5rem;
             font-weight: 700;
@@ -457,7 +478,7 @@
               }
             }
 
-            .price {
+            .selected-addon-price {
               color: $primary;
               font-weight: 600;
               font-size: 1.5rem;
@@ -481,7 +502,7 @@
           }
         }
 
-        .price {
+        .total-price {
           color: $purple;
           font-size: 2rem;
           font-weight: 700;
@@ -496,6 +517,48 @@
           background-color: transparent;
           color: $grey;
           padding: 0;
+        }
+      }
+    }
+
+    #form-five {
+      top: 1000px;
+      transition: .3s ease-in-out;
+
+      .content {
+        width: 80%;
+        height: 80%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        // grid-template-columns: 1fr;
+
+        figure {
+          width: 6.25rem;
+          height: 6.25rem;
+          margin-bottom: 20px;
+          
+          img {
+            width: 100%;
+            height: 100%;
+            aspect-ratio: 1;
+          }
+        }
+        
+        .headline {
+          color: $primary;
+          font-size: 3.25rem;
+          font-weight: 700;
+          margin-bottom: 10px;
+        }
+
+        .description {
+          color: $grey;
+          font-size: 1.5rem;
+          font-weight: 500;
+          text-align: center;
         }
       }
     }
